--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=3597d9c6cfa501ee397021176364a82a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/WooferDB?serverVersion=mariadb-10.8.3&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
