--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/twig-bridge": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
