--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
-    # form_themes:  ['bootstrap_5_layout.html.twig']
+    form_themes:  
+        # this is the path to the file that dictates the theme for errors
+        - 'form/fields.html.twig'
 
 when@test:
     twig:
